# strojniske-ladjice

./: Dockerfile  README.md  todo.txt
BattleshipGame/: CMakeLists.txt
BattleshipGame/include/: Board.h  Game.h  Orientation.h
BattleshipGame/include/players/: Kristof.h  Player.h  Player2.h  PlayerHuman.h  RandomPlayer.h  s23232017.h  s23232067.h  s232xxxxx.h
BattleshipGame/src/: Board.cpp  Game.cpp  main.cpp  play.cpp
BattleshipGame/src/players/: Kristof.cpp  Player.cpp  Player2.cpp  PlayerHuman.cpp  RandomPlayer.cpp  s23232017.cpp  s23232067.cpp  s232xxxxx.cpp
BattleshipGame/tests/: checkValid_test.cpp  isSetupValid_test.cpp  setupBoard_test.cpp
